--- a/_layout.ejs
+++ b/_layout.ejs
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%- pageTitle %> | <%- siteTitle %></title>
-    <link rel="stylesheet" type="text/css"      href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/theme.css">
+    <link rel="stylesheet" type="text/css" href="css/chartist.min.css">
     <link href='https://fonts.googleapis.com/ css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,5 +25,7 @@
 <!-- javascript //-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min. js"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script src="js/chartist.min.js" type="text/javascript"></script>
+<script src="js/bootboard-charts.js" type="text/javascript"></script>
 </body>
 </html>
