Template Setup and Sidebar

--- a/css/components/_variables.less
+++ b/css/components/_variables.less
@@ -27,40 +27,40 @@
 //=====================================================
 // Backgrounds
 //=====================================================
-@primary-background: @white;
-@secondary-background: @off-white;
+@primary-background: @black;
+@secondary-background: @dark-grey;
 @third-background: @light-grey;
 @fourth-background: @grey;
-@inverse-background: @dark-grey;
+@inverse-background: @white;
 
 //=====================================================
 // Text
 //=====================================================
-@primary-text: @dark-grey;
-@light-text: @light-grey;
-@loud-text: @black;
+@primary-text: @white;
+@light-text: @dark-grey;
+@loud-text: @white;
 @inverse-text: @white;
-@heading-text: @dark-grey;
+@heading-text: @light-grey;
 
 //=====================================================
 // Links
 //=====================================================
-@primary-link-color: @blue1;
-@primary-link-color-hover: @blue2;
+@primary-link-color: @light-grey;
+@primary-link-color-hover: @white;
 
 //=====================================================
 // Borders
 //=====================================================
-@border-color: @light-grey;
-@border-size: 1px; @border-type: solid;
-@border-focus: @grey;
-@secondary-border-color: @blue1;
+@border-color: @dark-grey;
+@border-size: 1px;
+@border-type: solid;
+@border-focus: @light-grey;
 
 //=====================================================
 // Typography
 //=====================================================
-@body-copy: "Helvetica Neue", helvetica, arial, verdana, sans-serif;
-@heading-copy: "Helvetica Neue", helvetica, arial, verdana, sansserif;
+@body-copy: "Roboto", helvetica, arial, verdana, sans-serif;
+@heading-copy: "Roboto", helvetica, arial, verdana, sans-serif;
 @base-font-size: 14px;
 @font-size: 1em;
 @base-line-height: 1.5;
