--- a/index.ejs
+++ b/index.ejs
@@ -1,9 +1,25 @@
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-lg-12">
-            <h1>Bootstrap Boilerplate</h1>
-            <p>This is a Bootstrap starter template built with Harp, Less, CSS, EJS, and HTML</p>
-            <p>Made in Vancouver by <a href="http://twitter.com/cardeo">@cardeo</a></p>
+        <div class="col-lg-3">
+            <div class="collapse navbar-collapse" id="bootboard-nav">
+                <ul class="nav nav-pills nav-stacked">
+                    <li class="navigation-header">Control Panel</li>
+                    <li class="active"><a href="#">Dashboard</a></li>
+                    <li><a href="#">Applications</a></li>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">Analytics</a></li>
+                    <li><a href="#">Discussion</a></li>
+                    <li><a href="#">Users</a></li>
+                    <li class="navigation-header">Account</li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Settings</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Logout</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-lg-9">
+            <!-- content //-->
         </div>
     </div>
 </div>
