--- a/partial/_footer.ejs
+++ b/partial/_footer.ejs
@@ -1,7 +1,16 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-12">
-            &copy; 2016 Daniel Park
+<!-- footer //-->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li><a href="#"><i class="fa fa-facebook-official"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-pinterest-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+                    <li>&copy; 2015 Bootstrap Dashboard</li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
+</footer>
