--- a/partial/_header.ejs
+++ b/partial/_header.ejs
@@ -1,18 +1,24 @@
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
+            <button type="button" class="navbar-toggle"
+                    datatoggle="collapse" data-target="#bootboard-nav">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index.html" class="navbar-brand"><%- siteTitle %></a>
+            <a class="navbar-brand" href="#">Bootstrap<span>Dashboard</span></a>
         </div>
-        <div class="collapse navbar-collapse" id="navbar1">
-            <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </div>
+        <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+            </div>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <i class="fa fa-user"></i> John Smith
+            </li>
+        </ul>
     </div>
 </nav>
