--- a/index.ejs
+++ b/index.ejs
@@ -19,7 +19,29 @@
             </div>
         </div>
         <div class="col-lg-9">
-            <!-- content //-->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="page-header">
+                        <h3>Charts <small>A quick view of your website stats</small></h3>
+                    </div>
+                    <div class="charts">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="ct-chart-one ct-perfect-fourth"></div>
+                                Impressions
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="ct-chart-two ct-perfect-fourth"></div>
+                                Clicks
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="ct-chart-three ct-perfect-fourth"></div>
+                                Sales
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
