--- a/_layout.ejs
+++ b/_layout.ejs
@@ -7,8 +7,8 @@
     <title><%- pageTitle %> | <%- siteTitle %></title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/theme.css">
     <link rel="stylesheet" type="text/css" href="css/chartist.min.css">
+    <link rel="stylesheet" type="text/css" href="css/theme.css">
     <link href='https://fonts.googleapis.com/ css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,7 +23,7 @@
 <%- yield %>
 <%- partial("partial/_footer") %>
 <!-- javascript //-->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min. js"></script>
+<script src="js/jquery-1.12.3.min.js"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/chartist.min.js" type="text/javascript"></script>
 <script src="js/bootboard-charts.js" type="text/javascript"></script>
