--- a/css/components/_charts.less
+++ b/css/components/_charts.less
@@ -13,3 +13,18 @@
 .ct-series-c .ct-slice-pie {
   fill: @blue2;
 }
+
+.ct-series-a .ct-line,
+.ct-series-a .ct-point  {
+  stroke: @blue1;
+}
+
+.ct-series-b .ct-line,
+.ct-series-b .ct-point {
+  stroke: @aqua1;
+}
+
+.ct-series-c .ct-line,
+.ct-series-c .ct-point {
+  stroke: @purple1;
+}
