--- a/index.ejs
+++ b/index.ejs
@@ -19,10 +19,13 @@
             </div>
         </div>
         <div class="col-lg-9">
+
             <div class="row">
                 <div class="col-lg-12">
                     <div class="page-header">
-                        <h3>Charts <small>A quick view of your website stats</small></h3>
+                        <h3>Charts
+                            <small>A quick view of your website stats</small>
+                        </h3>
                     </div>
                     <div class="charts">
                         <div class="row">
@@ -42,6 +45,154 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="page-header">
+                        <h3>Widgets
+                            <small>Important stats about your websites</small>
+                        </h3>
+                    </div>
+                    <div class="row widgets">
+                        <div class="col-lg-3">
+                            <div class="panel panel-success">
+                                <div class="panel-heading">Impressions</div>
+                                <div class="panel-body">
+                                    <h2>2,338</h2>
+                                    <i class="fa fa-arrow-circle-up"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="panel panel-danger">
+                                <div class="panel-heading">Conversion Rate</div>
+                                <div class="panel-body">
+                                    <h2>2.3%</h2>
+                                    <i class="fa fa-arrow-circle-down"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="panel panel-danger">
+                                <div class="panel-heading">Mobile Visits</div>
+                                <div class="panel-body">
+                                    <h2>1,453</h2>
+                                    <i class="fa fa-arrow-circle-down"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="panel panel-success">
+                                <div class="panel-heading">New Visits</div>
+                                <div class="panel-body">
+                                    <h2>52.4%</h2>
+                                    <i class="fa fa-arrow-circle-up"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="page-header">
+                        <h3>Panels
+                            <small>Detailed information about your website</small>
+                        </h3>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Top Referals</div>
+                        <table class="table table-striped table-bordered table-hover">
+                            <tbody>
+                            <tr>
+                                <td>google.com</td>
+                                <td>1,656</td>
+                            </tr>
+                            <tr>
+                                <td>facebook.com</td>
+                                <td>1,453</td>
+                            </tr>
+                            <tr>
+                                <td>twitter.com</td>
+                                <td>945</td>
+                            </tr>
+                            <tr>
+                                <td>pinterest.com</td>
+                                <td>922</td>
+                            </tr>
+                            <tr>
+                                <td>linkedin.com</td>
+                                <td>844</td>
+                            </tr>
+                            <tr>
+                                <td>buffer.com</td>
+                                <td>817</td>
+                            </tr>
+                            <tr>
+                                <td>bing.com</td>
+                                <td>767</td>
+                            </tr>
+                            <tr>
+                                <td>yahoo.com</td>
+                                <td>672</td>
+                            </tr>
+                            <tr>
+                                <td>msn.com</td>
+                                <td>454</td>
+                            </tr>
+                            <tr>
+                                <td>cbc.com</td>
+                                <td>231</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <button class="btn btn-primary">Show More</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="page-header">
+                        <h3>Table <small>More detailed information about your website</small></h3>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="ct-chart-table ct-golden-section"></div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">Traffic Sources</div>
+                                <table class="table table-striped table-bordered table-hover">
+                                    <tbody>
+                                    <tr>
+                                        <td>Organic Search</td>
+                                        <td>1,656</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Referral</td>
+                                        <td>1,453</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Direct</td>
+                                        <td>945</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <button class="btn btn-primary">Show More</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
